--- a/EFI/OC/Config.plist
+++ b/EFI/OC/Config.plist
@@ -14,14 +14,6 @@
 				<key>Path</key>
 				<string>SSDT-AIR13IWL.aml</string>
 			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>GPRW</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT-GPRW.aml</string>
-			</dict>
 		</array>
 		<key>Block</key>
 		<array/>
@@ -38,9 +30,21 @@
 				<data>
 				X1ExMQ==
 				</data>
+				<key>OemTableId</key>
+				<data>
+				Q0ItMDEgICA=
+				</data>
 				<key>Replace</key>
 				<data>
 				WFExMQ==
+				</data>
+				<key>Skip</key>
+				<integer>0</integer>
+				<key>TableLength</key>
+				<integer>259150</integer>
+				<key>TableSignature</key>
+				<data>
+				RFNEVA==
 				</data>
 			</dict>
 			<dict>
@@ -54,9 +58,21 @@
 				<data>
 				X1ExMg==
 				</data>
+				<key>OemTableId</key>
+				<data>
+				Q0ItMDEgICA=
+				</data>
 				<key>Replace</key>
 				<data>
 				WFExMg==
+				</data>
+				<key>Skip</key>
+				<integer>0</integer>
+				<key>TableLength</key>
+				<integer>259150</integer>
+				<key>TableSignature</key>
+				<data>
+				RFNEVA==
 				</data>
 			</dict>
 			<dict>
@@ -70,9 +86,21 @@
 				<data>
 				R1BSVwI=
 				</data>
+				<key>OemTableId</key>
+				<data>
+				Q0ItMDEgICA=
+				</data>
 				<key>Replace</key>
 				<data>
 				WFBSVwI=
+				</data>
+				<key>Skip</key>
+				<integer>0</integer>
+				<key>TableLength</key>
+				<integer>259150</integer>
+				<key>TableSignature</key>
+				<data>
+				RFNEVA==
 				</data>
 			</dict>
 		</array>
@@ -375,6 +403,14 @@
 			</dict>
 			<dict>
 				<key>BundlePath</key>
+				<string>BrcmBluetoothInjector.kext</string>
+				<key>Enabled</key>
+				<true/>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+			</dict>
+			<dict>
+				<key>BundlePath</key>
 				<string>BrcmFirmwareData.kext</string>
 				<key>Enabled</key>
 				<true/>
@@ -496,7 +532,28 @@
 			<integer>0</integer>
 		</dict>
 		<key>Tools</key>
-		<array/>
+		<array>
+			<dict>
+				<key>Comment</key>
+				<string>UEFI Shell</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Name</key>
+				<string>UEFI Shell</string>
+				<key>Path</key>
+				<string>Shell.efi</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Clean Nvram</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Name</key>
+				<string>Clean Nvram</string>
+				<key>Path</key>
+				<string>CleanNvram.efi</string>
+			</dict>
+		</array>
 	</dict>
 	<key>NVRAM</key>
 	<dict>
@@ -534,7 +591,30 @@
 		<key>LegacyEnable</key>
 		<false/>
 		<key>LegacySchema</key>
-		<dict/>
+		<dict>
+			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
+			<array>
+				<string>EFILoginHiDPI</string>
+				<string>EFIBluetoothDelay</string>
+				<string>LocationServicesEnabled</string>
+				<string>SystemAudioVolume</string>
+				<string>SystemAudioVolumeDB</string>
+				<string>bluetoothActiveControllerInfo</string>
+				<string>bluetoothInternalControllerInfo</string>
+				<string>flagstate</string>
+				<string>fmm-computer-name</string>
+				<string>nvda_drv</string>
+				<string>prev-lang:kbd</string>
+			</array>
+			<key>8BE4DF61-93CA-11D2-AA0D-00E098032B8C</key>
+			<array>
+				<string>Boot0080</string>
+				<string>Boot0081</string>
+				<string>Boot0082</string>
+				<string>BootNext</string>
+				<string>BootOrder</string>
+			</array>
+		</dict>
 	</dict>
 	<key>PlatformInfo</key>
 	<dict>
