--- a/EFI/OC/Kexts/BrcmPatchRAM2.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/BrcmPatchRAM2.kext/Contents/Info.plist
@@ -69,6 +69,21 @@
 			<key>idVendor</key>
 			<integer>2652</integer>
 		</dict>
+		<key>0a5c_6412_injector</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.apple.iokit.BroadcomBluetoothHostControllerUSBTransport</string>
+			<key>IOClass</key>
+			<string>BroadcomBluetoothHostControllerUSBTransport</string>
+			<key>IOProbeScore</key>
+			<integer>3000</integer>
+			<key>IOProviderClass</key>
+			<string>IOUSBHostDevice</string>
+			<key>idProduct</key>
+			<integer>25618</integer>
+			<key>idVendor</key>
+			<integer>2652</integer>
+		</dict>
 		<key>BrcmPatchRAMResidency</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
