--- a/EFI/OC/Config.plist
+++ b/EFI/OC/Config.plist
@@ -574,6 +574,8 @@
 			<dict>
 				<key>boot-args</key>
 				<string>brcmfx-country=HK</string>
+				<key>bootercfg</key>
+				<string>log=0 debug=0 level=0</string>
 				<key>csr-active-config</key>
 				<data>
 				ZwAAAA==
