--- a/EFI/OC/Kexts/Air13IWL.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/Air13IWL.kext/Contents/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
-	<key>CFBundleGetInfoString</key>
-	<string>1.0 Copyright © 2018 Headsoft. All rights reserved.</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.Lenovo.Air13IWL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -16,8 +12,6 @@
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>IOKitPersonalities</key>
@@ -1139,6 +1133,8 @@
 			<string>MacBookPro15,2</string>
 		</dict>
 	</dict>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2017 - 2019 PMheart. All rights reserved.</string>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
 </dict>
